Added github and linkedin href tag for the Home page

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                 </div>
 
                 <div class="home__social">
-                    <a href="" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
-                    <a href="" class="home__social-icon"><i class='bx bxl-github' ></i></a>
+                    <a href="https://www.linkedin.com/in/ekinsenler" target="_blank" rel="noopener" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
+                    <a href="https://github.com/ekinsenler" target="_blank" rel="noopener" class="home__social-icon"><i class='bx bxl-github' ></i></a>
                 </div>
 
                 <div class="home__img">
