--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <link rel="stylesheet" href="assets/css/styles.css">
-        <link rel="icon" type="image/x-icon" href="/assets/img/favicon.ico">
+        <link rel="apple-touch-icon" sizes="180x180" href="assets/img/icon/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="assets/img/icon/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="assets/img/icon/favicon-16x16.png">
+        <link rel="manifest" href="assets/img/icon/site.webmanifest">
         <!-- =====BOX ICONS===== -->
         <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
 
