Changed title and added recent credly badge

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <!-- =====BOX ICONS===== -->
         <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
 
-        <title>Portfolio website complete</title>
+        <title>Junior AI Engineer</title>
     </head>
     <body>
         <!--===== HEADER =====-->
@@ -76,6 +76,7 @@
                     <div>
                         <p class="about__text">I graduated from Sabancı University with a degree in Computer Science, and then completed my master's degree in Artificial Intelligence and Robotics at Sapienza Università di Roma. I have a passion for artificial intelligence and data science. My enthusiasm for this field constantly drives me to learn and explore more. I greatly enjoy working in this field and making contributions to it 🤖</p>           
                         <div data-iframe-width="100" data-iframe-height=auto data-share-badge-id="2b21ab9c-9e5c-42ba-9b33-ffeeb94e9ab7" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
+                        <div data-iframe-width="100" data-iframe-height="auto" data-share-badge-id="f2b1ee20-fad9-4076-a647-30e1be0dc24d" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
                     </div>                                   
                 </div>
             </section>
